# MeetMind

./: .env.example  .gitignore  .npmrc  CLAUDE.md  README.md  architecture.html  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  project_flow.md  pyproject.toml  tsconfig.json
data/seed/: architect_seeds.json  tester_seeds.json
data/seed/backend/: seeds.json
data/seed/frontend/: seeds.json
data/seed/pm/: seeds.json
meetmind/: __init__.py
meetmind/agents/: __init__.py  architect.py  backend.py  base.py  frontend.py  pm.py  tester.py
meetmind/cli/: __init__.py  main.py
meetmind/config/: __init__.py  constants.py  settings.py
meetmind/database/: __init__.py  client.py  constants.py  embedding.py  initializer.py  loaders.py  rag_retriever.py  reranker.py  splitters.py
meetmind/graph/: __init__.py  builder.py  route.py  routing.py  state.py
meetmind/tools/: __init__.py  rag_retriever.py
meetmind/utils/: __init__.py  formatting.py  logger.py
src/: index.ts
src/agents/: architect.ts  backend.ts  base.ts  frontend.ts  pm.ts  tester.ts
src/cli/: main.ts
src/config/: constants.ts  settings.ts
src/database/: client.ts  constants.ts  embedding.ts  initializer.ts  loaders.ts  rag_retriever.ts  reranker.ts  splitters.ts
src/graph/: builder.ts  route.ts  state.ts
src/utils/: formatting.ts  logger.ts
tests/: 1.py
