[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meetmind"
version = "0.1.0"
description = "Multi-agent RAG collaboration system using LangChain, LangGraph and Chroma"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MeetMind Team" }]
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.24",
    "black>=24.0",
    "ruff>=0.4",
]

[project.scripts]
meetmind = "meetmind.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["meetmind"]
