[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meetmind"
version = "0.1.0"
description = "Multi-agent RAG collaboration system using LangChain, LangGraph, Elasticsearch and Cohere Rerank"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MeetMind Team" }]
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rich>=13.0",
    # 文档加载器
    "pypdf>=4.0",                       # PDF 文本提取
    "python-docx>=1.1",                 # .docx 文本提取
    # 文本切块 (RAG chunk)
    "langchain-text-splitters>=0.2",    # RecursiveCharacterTextSplitter / MarkdownHeaderTextSplitter
    # 存储 + 混合检索 (BM25 + dense vector kNN, 三合一)
    "elasticsearch>=8.13,<9",           # ES 官方 Python client
    # Embedding (本地, 384 维, 与之前 chroma 内置的 ONNX MiniLM 同一模型)
    "sentence-transformers>=3.0",       # 自带 torch，首次安装较大
    # 重排序 (混合检索 top-N 候选 → Cohere rerank → top-K)
    "cohere>=5.13",
    # 可观测性
    "langsmith>=0.1",                   # LangChain/LangGraph 全链路追踪
    "towhee>=1.1.3",
    "towhee-models>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.24",
    "black>=24.0",
    "ruff>=0.4",
]

[project.scripts]
meetmind = "meetmind.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["meetmind"]
